Boceto Estudios Desde Testing

--- a/index.html
+++ b/index.html
@@ -34,7 +34,21 @@
 
     </section>
    
-    <section class = "section3" > section3 (Estudios y Lenguajes)</section>
+    <section class = "section3"> 
+        <div class="div-estudios"> <h2 class="div-estudios-h2">Estudios</h2>
+             <p class="div-estudios-p">COLEGIO PROVINCIAL N°1 "J.V.G" </p>  
+             <p class="div-estudios-p">Bachiller con orientación en C. Sociales. (2014-2019)</p>
+             <p class="div-estudios-p-utn">UTN - FACULTAD REGIONAL LA RIOJA</p>
+             <p class="div-estudios-p">Tecnicatura Universitaria en Programación (En curso)</p>
+             <h2  class="div-lenguajes-h2">Lenguajes y Herramientas</h2>
+             <ul class="div-estudios-ul">
+                 <li class="div-estudios-li">HTML,CSS</li>
+                 <li class="div-estudios-li">PYTHON</li>
+                 <li class="div-estudios-li">GIT,GITHUB</li>
+                 <li class="div-estudios-li">INGLES INTERMEDIO</li>
+             </ul>
+         </div>
+     </section>
     
     <section class = "section4" id="Proyectos"> section4 (Proyectos) </section>
 
